@@ -22,16 +22,18 @@ my %WriteMakefileArgs = (
     "LWP::UserAgent" => 0,
     "WWW::Shorten" => 0,
     "XML::RSS" => 0,
-    "strict" => 0,
-    "warnings" => 0
+    "exact" => 0
   },
   "TEST_REQUIRES" => {
+    "Bot::IRC" => 0,
+    "Bot::IRC::Store" => 0,
     "File::Spec" => 0,
     "IO::Handle" => 0,
     "IPC::Open3" => 0,
+    "Test2::V0" => 0,
     "Test::More" => 0,
-    "Test::Most" => 0,
-    "constant" => 0
+    "strict" => 0,
+    "warnings" => 0
   },
   "VERSION" => "1.05",
   "test" => {
@@ -41,17 +43,19 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
+  "Bot::IRC" => 0,
+  "Bot::IRC::Store" => 0,
   "Date::Parse" => 0,
   "File::Spec" => 0,
   "IO::Handle" => 0,
   "IPC::Open3" => 0,
   "LWP::Protocol::https" => 0,
   "LWP::UserAgent" => 0,
+  "Test2::V0" => 0,
   "Test::More" => 0,
-  "Test::Most" => 0,
   "WWW::Shorten" => 0,
   "XML::RSS" => 0,
-  "constant" => 0,
+  "exact" => 0,
   "strict" => 0,
   "warnings" => 0
 );
