@@ -2,8 +2,7 @@ package Bot::IRC::X::Feeds;
 # ABSTRACT: Bot::IRC plugin to watch and notify on changes in RSS feeds
 
 use 5.014;
-use strict;
-use warnings;
+use exact;
 
 use XML::RSS;
 use LWP::UserAgent;
